--- a/views/index.html
+++ b/views/index.html
@@ -112,7 +112,7 @@
 
     <article id="portfolio">
       <div class="work-info">
-        <h1>professionals skills</h1>
+        <h1>professional skills</h1>
         <p>I design and develop services for customer of all sizes, specializing in design creative and stylish UI/UX also modern website and web app also mobile apps
           <span class="react">(react native).</span>
         </p>
@@ -134,6 +134,25 @@
       </div>
     </article>
 
+    <article id="my-latest-work">
+      <section class="titles">
+        <h1>latest works</h1>
+        <ul>
+          <li><a href="#all">all</a></li>
+          <li><a href="#branding">branding</a></li>
+          <li><a href="#ui-design">ui design</a></li>
+          <li><a href="#projects">project</a></li>
+        </ul>
+      </section>
 
+      <section class="projects">
+        <img class="image-one" src="../images/portfolio/1.jpg" alt="">
+        <img class="image-two" src="../images/portfolio/2.jpg" alt="">
+        <img class="image-three" src="../images/portfolio/3.jpg" alt="">
+        <img class="image-four" src="../images/portfolio/4.jpg" alt="">
+        <img class="image-five" src="../images/portfolio/5.jpg" alt="">
+        <img class="image-six" src="../images/portfolio/6.jpg" alt="">
+      </section>
+    </article>
   </body>
 </html>
