--- a/views/index.html
+++ b/views/index.html
@@ -154,5 +154,17 @@
         <img class="image-six" src="../images/portfolio/6.jpg" alt="">
       </section>
     </article>
+
+    <article id="get-in-touch">
+      <div class="gtext">
+        <p>I’m extremely excited about web development and it’s design in all it forms.</p>
+      </div>
+      
+      <div class="get-more">
+        <p>Get in touch</p>
+      </div>
+    </article>
+
+    </article>
   </body>
 </html>
