--- a/views/index.html
+++ b/views/index.html
@@ -134,7 +134,7 @@
       </div>
     </article>
 
-    <article id="my-latest-work">
+    <article id="my-latest-projects">
       <section class="titles">
         <h1>latest works</h1>
         <ul>
@@ -159,12 +159,62 @@
       <div class="gtext">
         <p>I’m extremely excited about web development and it’s design in all it forms.</p>
       </div>
-      
+
       <div class="get-more">
         <p>Get in touch</p>
       </div>
     </article>
 
+    <article id="testimonial">
+      <h1>testimonial</h1>
+      <div class="container left">
+        <div class="image-holder">
+          <img src="../images/testimonial/woman.jpg" alt="">
+        </div>
+        <p>" One of the best par of my job is to have a web designer and developer like Prince." - Diana Salvoty.</p>
+      </div>
+      <div class="container right">
+        <div class="image-holder">
+          <img src="../images/testimonial/man.jpg" alt="">
+        </div>
+        <p>" He created my website with interactive interfaceand design." - David Mois.</p>
+      </div>
     </article>
+
+    <article id="blogs">
+      <h1>my latest work</h1>
+      <div class="left-blog">
+        <img src="../images/blog" alt="">
+        <p><i>2 months ago</i></p>
+        <div class="blog-titles">
+          <p>simple landing page</p>
+        </div>
+        <div class="click-buttons">
+          <p>click for more</p>
+        </div>
+      </div>
+      <div class="center-blog">
+        <img src="../images/blog" alt="">
+        <p><i>2 months ago</i></p>
+        <div class="blog-titles">
+          <p>this website has particles effect as the background</p>
+        </div>
+        <div class="click-buttons">
+          <p>click for more</p>
+        </div>
+      </div>
+      <div class="right-blog">
+        <img src="../images/blog" alt="">
+        <p><i>2 months ago</i></p>
+        <div class="blog-titles">
+          <p>A login form page</p>
+        </div>
+        <div class="click-buttons">
+          <p>click for more</p>
+        </div>
+      </div>
+    </article>
+
+    <!-- <footer></footer> -->
   </body>
 </html>
