--- a/views/index.html
+++ b/views/index.html
@@ -183,37 +183,54 @@
 
     <article id="blogs">
       <h1>my latest work</h1>
-      <div class="left-blog">
-        <img src="../images/blog" alt="">
-        <p><i>2 months ago</i></p>
-        <div class="blog-titles">
-          <p>simple landing page</p>
-        </div>
-        <div class="click-buttons">
-          <p>click for more</p>
-        </div>
-      </div>
-      <div class="center-blog">
-        <img src="../images/blog" alt="">
-        <p><i>2 months ago</i></p>
-        <div class="blog-titles">
-          <p>this website has particles effect as the background</p>
-        </div>
-        <div class="click-buttons">
-          <p>click for more</p>
-        </div>
-      </div>
-      <div class="right-blog">
-        <img src="../images/blog" alt="">
-        <p><i>2 months ago</i></p>
-        <div class="blog-titles">
-          <p>A login form page</p>
-        </div>
-        <div class="click-buttons">
-          <p>click for more</p>
+      <div id="inner">
+        <div class="card-view">
+
+          <div class="left-blog">
+            <img src="../images/blog/left.png" alt="">
+
+            <p><i>2 months ago</i></p>
+
+            <div class="blog-titles">
+              <p>simple landing page</p>
+            </div>
+
+            <div class="click-buttons">
+              <p>click for more</p>
+            </div>
+          </div>
+
+          <div class="center-blog">
+            <img src="../images/blog/center.png" alt="">
+            <p><i>2 months ago</i></p>
+            <div class="blog-titles">
+              <p>this website has particles effect as the background</p>
+            </div>
+            <div class="click-buttons">
+              <p>click for more</p>
+            </div>
+          </div>
+
+          <div class="right-blog">
+            <img src="../images/blog/right.png" alt="">
+            <p><i>2 months ago</i></p>
+            <div class="blog-titles">
+              <p>A login form page</p>
+            </div>
+            <div class="click-buttons">
+              <p>click for more</p>
+            </div>
+          </div>
+
         </div>
       </div>
     </article>
+
+    <!-- <article id="contact">
+      <input type="text" name="name" placeholder="name">
+      <input type="email" name="email" placeholder="email">
+      <input type="" name="" value="">
+    </article> -->
 
     <!-- <footer></footer> -->
   </body>
