--- a/views/index.html
+++ b/views/index.html
@@ -226,12 +226,45 @@
       </div>
     </article>
 
-    <!-- <article id="contact">
-      <input type="text" name="name" placeholder="name">
-      <input type="email" name="email" placeholder="email">
-      <input type="" name="" value="">
-    </article> -->
+    <article id="contact">
+      <h1>keep in touch</h1>
+      <p>give me response</p>
+      <form class="forms">
+        <input type="text" name="name" placeholder="name">
+        <input type="email" name="email" placeholder="email" required>
+        <textarea name="name" placeholder="comment here"></textarea>
+        <button type="button" name="button">Send</button>
+      </form>
+    </article>
 
-    <!-- <footer></footer> -->
+    <footer>
+      <div class="links-container">
+        <div class="views">
+          <h1>Views</h1>
+          <ul>
+            <li><a href="#">UI Design Project</a></li>
+            <li><a href="#">Web Layout</a></li>
+            <li><a href="#">Animation Texts</a></li>
+          </ul>
+        </div>
+        <div class="quicklink">
+          <h1>Quick Link</h1>
+          <ul>
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Instagram</a></li>
+            <li><a href="#">Twitter</a></li>
+          </ul>
+        </div>
+        <div class="collaboration">
+          <h1>Collaborate</h1>
+          <ul>
+            <li><a href="#">Github</a></li>
+            <li><a href="#">Figma</a></li>
+            <li><a href="#">Slack</a></li>
+          </ul>
+        </div>
+      </div>
+      <p>&copy; 2020 - PrinceStudio</p>
+    </footer>
   </body>
 </html>
