--- a/views/index.html
+++ b/views/index.html
@@ -232,7 +232,7 @@
       <form class="forms">
         <input type="text" name="name" placeholder="name">
         <input type="email" name="email" placeholder="email" required>
-        <textarea name="name" placeholder="comment here"></textarea>
+        <textarea name="comment" placeholder="comment"></textarea>
         <button type="button" name="button">Send</button>
       </form>
     </article>
