--- a/views/index.html
+++ b/views/index.html
@@ -233,7 +233,7 @@
         <input type="text" name="name" placeholder="name">
         <input type="email" name="email" placeholder="email" required>
         <textarea name="comment" placeholder="comment"></textarea>
-        <button type="button" name="button">Send</button>
+        <button type="submit" name="button">Send</button>
       </form>
     </article>
 
